# automating-build-process

./: .gitignore  MANIFEST.in  README.md  build-package.sh  check_ver.sh  clear-dist-build.sh  pyproject.toml  run.sh  version.txt
.github/workflows/: check_ver.sh  publish.yml
python_project_00/: README.md  check_ver.sh  slow.py  version.txt
python_project_00/my_folder/: my_data.json  my_json_data.py
tests/: _test_slow.py  original_test_states_info.py  test_slow.py  test_states_info.py
tests/my_folder/: _test_my_json_data.py  test_my_json_data.py
